# juju

./: .bzrignore  .commit_marker_temp  .dockerignore  .gitignore  .golangci.toml  .golangci.yml  .lbox  .lbox.check  .lingo  .push_trigger  .reviewboardrc  .sbomber-manifest.yaml  .temp_push_marker  .wokeignore  0001-F.patch  AGENTS.architecture-rules.md  AGENTS.core-domain-rules.md  AGENTS.doc-dot-go-rules.md  AGENTS.documentation-landing-pages.md  AGENTS.documentation.rules.md  AGENTS.md  CODING.md  CONTRIBUTING  CONTRIBUTING.md  DOCUMENTATION_ANALYSIS.md  Dockerfile  Dockerfile.1  FAQ.txt  Gopkg.toml  ISSUE_TEMPLATE.md  LICENCE  MAGIC.md  Makefile  PULL_REQUEST_TEMPLATE.md  README  README.md  SECURITY.md  STYLE.md  Untitled.ipynb  ]  (+397 more)
acceptancetests/: .gitignore  Makefile  README.md  add-missing-result-yaml-files.py  add-remote-machine.bash  assemble-parallel-streams.bash  assess  assess_add_cloud.py  assess_add_credentials.py  assess_agent_metadata.py  assess_autoload_credentials.py  assess_block.py  assess_bootstrap.py  assess_budget.py  assess_bundle_export.py  assess_caas_bootstrap.py  assess_caas_deploy_charms.py  assess_caas_deploy_kubeflow.py  assess_cloud.py  assess_cloud_display.py  assess_constraints.py  assess_container_networking.py  assess_cross_model_relations.py  assess_deploy_lxd_profile.py  assess_deploy_lxd_profile_bundle.py  assess_deploy_trusted_bundle.py  assess_deploy_webscale.py  assess_destroy_model.py  assess_endpoint_bindings.py  assess_heterogeneous_control.py  assess_juju_output.py  assess_juju_sync_tools.py  assess_log_forward.py  assess_log_rotation.py  assess_lxd_space.py  (+118 more)
(+26208 files in other folders)
