[isort]
combine_as_imports = true
default_section = THIRDPARTY
include_trailing_comma = true
known_third_party =
known_first_party =
multi_line_output = 5
not_skip = __init__.py
known_standard_library = json
skip =

[metadata]
description-file = README.md

[flake8]
ignore =
    E722
    E123
exclude =
    assess_model_change_watcher.py
    repository
    venv
max-line-length = 119
